--- a/bigteatr/index.html
+++ b/bigteatr/index.html
@@ -48,7 +48,7 @@
           <p class="ppp" style="display: inline-block; color: #D1A954;">о</p><p class="p-sec">театре</p>
         </div>
       <div class="col-xl-5 col-lg-7 col-md-7 teat-1 col-sm-12">
-        <p class="teat-p-1">Самый лучший театр СПБ</p>
+        <p class="teat-p-1">Лучший театр Салавата</p>
         <p class="teat-p-2">Как свидетельствуют архивные документы, первое каменное здание Большого театра начали возводить в 1775 году по проекту Антонио Ринальди. В дальнейшем, после того как Ринальди упал с лесов и не мог лично наблюдать за ходом работ, Екатерина II поручила немецкому театральному декоратору и архитектору Людвигу Филиппу Тишбейну создать новый проект театра, который и был воплощён архитекторами Ф. В. фон Бауром и М. А. Деденёвым. Открытие его состоялось в 1783 году, хотя, основываясь на других свидетельствах, годом открытия можно считать 1784 год.</p>
       </div>
         <div class="col-xl-3 col-lg-5 col-md-5 col-sm-12 teat-2">
